group "co.nvqa"
version "2.0.0"
apply plugin: "java"

sourceCompatibility = JavaVersion.VERSION_11

project.ext {
    defaultScenarioManager = "co.nvqa.operator_v2.cucumber.glue.ScenarioManager"
    autoConfigGlue = true
    cucumberGluePackage = [
            "co.nvqa.operator_v2.cucumber.glue",
            "classpath:co.nvqa.commons.cucumber.glue",
            "classpath:co.nvqa.common.cucumber.glue",
            "classpath:co.nvqa.common.ordercreate.cucumber.glue",
            "classpath:co.nvqa.commonauth.cucumber.glue",
            "classpath:co.nvqa.commonsort.cucumber.glue"]
}

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        url "http://nexus3.qa.tech.nv/repository/nvqa-release/"
        allowInsecureProtocol = true
    }
    maven {
        url "http://nexus3.qa.tech.nv/repository/nvqa-snapshot/"
        allowInsecureProtocol = true
    }
}

buildscript {
    repositories {
        mavenCentral()
        mavenLocal()
        maven { url 'https://plugins.gradle.org/m2/' }
        maven {
            url "http://nexus3.qa.tech.nv/repository/nvqa-release/"
            allowInsecureProtocol = true
        }
    }
    dependencies {
        classpath "gradle.plugin.com.github.viswaramamoorthy:gradle-util-plugins:0.1.0-RELEASE"
        classpath "co.nvqa:common-build:1.1.10"
        classpath "io.qameta.allure.gradle.report:allure-report-plugin:2.11.1"
        classpath "io.qameta.allure.gradle.adapter:allure-adapter-plugin:2.11.1"
    }
}

apply plugin: "co.nvqa.common-build"
apply plugin: "io.qameta.allure-adapter"
apply plugin: "io.qameta.allure-report"

dependencies {
    testImplementation 'ch.qos.logback:logback-classic:1.2.11'
    testImplementation 'org.apache.logging.log4j:log4j-core:2.19.0'
    testImplementation 'org.apache.poi:poi-ooxml:4.1.0'
    testCompileOnly 'org.projectlombok:lombok:1.18.24'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'

    implementation "co.nvqa:common-base:1.3.7"
    implementation "co.nvqa:common-ui:1.3.6"
    implementation "co.nvqa:common-ordercreate:1.3.6"
    implementation "co.nvqa:common-driver:1.3.9"
    implementation "co.nvqa:common-corev2:1.2.14"
    implementation "co.nvqa:common-core:1.3.20-RC7"
    implementation "co.nvqa:common-dp:1.3.25"
    implementation "co.nvqa:common-auth:1.3.3"
    implementation "co.nvqa:common-sort:1.3.16"
    implementation "co.nvqa:commons:2.5.31"
    implementation "co.nvqa:common-shipper:1.3.17-RC7"
    implementation "co.nvqa:common-recovery:1.3.4"
    implementation "co.nvqa:common-mm:1.3.14"
    implementation "co.nvqa:common-pricing:1.3.21-RC10"
    implementation "co.nvqa:common-lighthouse:1.3.1"
    implementation "co.nvqa:common-station:1.3.3"
    implementation "co.nvqa:common-sns:1.3.4"
    implementation "co.nvqa:common-fm:1.0.0"
}
